<resources>
    <string name="app_name">Assignment 2</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="button_addIngredient">Add Ingredient</string>
    <string name="button_addImage"> Add Image </string>
    <string name="hint_recipeTitle">Recipe Title</string>
    <string name="hint_recipeDescription">Recipe Description</string>
    <string name="hint_ingredientName">Ingredient Name</string>
    <string name="hint_ingredientAmount">Amount</string>
    <string name="hint_searchbar">Search</string>
    <string name="menu_addRecipe">Add</string>
    <string name="ingredients_title">Ingredients</string>
    <string name="filter_text">Filter: </string>
    <string name="checkbox_vegan">Vegan</string>
    <string name="checkbox_vegetarian">Vegetarian</string>
    <string name="checkbox_glutenFree">Gluten Free</string>
    <string name="enter_recipe_title"> Please enter a Recipe Title and Description </string>
    <string name="enter_ingredient_name_and_amount"> Please enter a Name and Amount for Ingredient </string>
    <string name="save_recipe"> Save Recipe </string>
    <string name="select_recipe_image">Select image</string>
    <string name="change_recipe_image">Change image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deleteRecipe">Delete</string>

    <string-array name="units_array">
        <item>g</item>
        <item>ml</item>
        <item>cups</item>
        <item>tbsp</item>
        <item>tsp</item>
        <item>none</item>
    </string-array>

    <string-array name="filter_array">
        <item>None</item>
        <item>Vegetarian</item>
        <item>Vegan</item>
        <item>Gluten Free</item>
    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_recipe_maps">Map of All Recipes</string>


</resources>
